fix: question not aligned to bottom on older mobile

--- a/src/shared/components/interaction/Question.scss
+++ b/src/shared/components/interaction/Question.scss
@@ -14,7 +14,7 @@
     //animation: shimmer 2s;
     min-height: 76px;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: center;
 
     > span {
